--- a/2. Second homework (WIP)/web version/templates/web.html
+++ b/2. Second homework (WIP)/web version/templates/web.html
@@ -34,7 +34,7 @@
             <h1>About</h1>
             <p>
                 This web version of the JSON request service is created just for fun and was not in the technical task. 
-                But i've get some advantages from that experience: learned some Python, HTML, CSS and JS, lol.
+                But i got some advantages from that experience: learned some Python, HTML, CSS and JS, lol.
             </p>
             <p>
                 <b>Features:</b>
