--- a/2. Second homework (WIP)/web version/templates/web.html
+++ b/2. Second homework (WIP)/web version/templates/web.html
@@ -5,12 +5,12 @@
             <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     </head>
     <body>
-        <form action = "https://localhost:8888/web" method = "GET" class="block1" id="form" >
+        <form method = "GET" class="block1" id="form" >
             <h1>Web version of the JSON request service</h1>
             <input class="input" type = "text" name = "js" onfocus="this.placeholder=''" placeholder="Enter your JSON request here" />
                 <div class="switch_1">
                     <p>
-                        <input class="submit" type = "submit" value = "Send request" />
+                        <input class="submit" type = "submit" id="btn" value = "Send GET" />
                     </p>
                     <label class="switch">
                         <input type="checkbox" id="cb" name="cb" onclick="changeMethod()" >
@@ -19,9 +19,11 @@
                     </label>
                     <script>
                         function changeMethod() {
-                        let check = document.getElementById("cb")
+                        let check = document.getElementById("cb");
                         let method = document.getElementById("form");
+                        let button = document.getElementById("btn");
                         check.checked ? form.method = "POST" : form.method = "GET"
+                        check.checked ? btn.value = "Send POST" : btn.value = "Send GET"
                         }
                     </script>
                 </div>
@@ -34,14 +36,14 @@
             <h1>About</h1>
             <p>
                 This web version of the JSON request service is created just for fun and was not in the technical task. 
-                But i got some advantages from that experience: learned some Python, HTML, CSS and JS, lol.
+                But I got some advantages from that experience: learned some Python, HTML, CSS and JS, lol.
             </p>
             <p>
                 <b>Features:</b>
             </p>     
                 <ul>
                     <li><p>You can send your JSON request via the top field; </p></li>
-                    <li><p>You can chose HTTP method by the toggle switch. By default it is GET request.</p></li>
+                    <li><p>You can choose HTTP method by the toggle switch. By default, it is GET request.</p></li>
                     <li><p><b>Emoji!</b> To give an example, just put your <b>cat</b> (lol) in the colons like that: <b>:cat:</b> 
                         and you'll get an emojized &#128008!</p></li>
                 </ul>
